# avs_lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
core/: avs_config.h  beat_detector.cpp  beat_detector.h  binary_reader.h  blend.cpp  blend.h  blend_ext.h  builtin_effects.cpp  builtin_effects.h  color.h  configurable.h  coordinate_grid.cpp  coordinate_grid.h  effect_base.cpp  effect_base.h  effect_container.h  event_bus.cpp  event_bus.h  expression_help.h  global_buffer.cpp  global_buffer.h  json.cpp  json.h  line_draw.h  line_draw_ext.h  matrix.h  parallel.h  parameter.cpp  parameter.h  plugin_manager.cpp  plugin_manager.h  preset.cpp  preset.h  renderer.h  ui.h
core/script/: lexer.cpp  lexer.h  parser.cpp  parser.h  script_engine.cpp  script_engine.h
docs/: ARCHITECTURE.md  COLOUR.md  EFFECTS.md  MIDI.md  POINT_DRAWING.md  PRESET_FORMAT.md
effects/: bass_spin.cpp  bass_spin.h  blitter_feedback.cpp  blitter_feedback.h  blur.cpp  blur.h  brightness.cpp  brightness.h  buffer_save.cpp  buffer_save.h  bump.cpp  bump.h  channel_shift.cpp  channel_shift.h  clear.cpp  clear.h  color_clip.cpp  color_clip.h  color_fade.cpp  color_fade.h  color_modifier.cpp  color_modifier.h  color_reduction.cpp  color_reduction.h  comment.cpp  comment.h  custom_bpm.cpp  custom_bpm.h  ddm.cpp  ddm.h  dot_fountain.cpp  dot_fountain.h  dot_grid.cpp  dot_grid.h  dot_plane.cpp  dot_plane.h  dynamic_movement.cpp  dynamic_movement.h  dynamic_movement_ext.cpp  dynamic_movement_ext.h  (+69 more)
example/: CMakeLists.txt  README.md
example/src/: main.cpp
tests/: CMakeLists.txt  debug_function.cpp  debug_function_test.cpp  main.cpp  quick_test.cpp  test_assignment_expressions.cpp  test_audio_variables.cpp  test_avs_variables.cpp  test_brightness_effect.cpp  test_channel_shift_effect.cpp  test_color_effects.cpp  test_color_format.cpp  test_complete_script_engine.cpp  test_coordinate_grid_mapping.cpp  test_coordinate_grid_new.cpp  test_dynamic_movement_effect.cpp  test_eel_functions.cpp  test_enum_parameter.cpp  test_evaluator.cpp  test_functions.cpp  test_integration.cpp  test_lexer.cpp  test_load_parameters_colors.cpp  test_midi_eventbus.cpp  test_minmax.cpp  test_movement_presets.cpp  test_multi_phase_scripts.cpp  test_preset_binary.cpp  test_script_extensions.cpp  test_semicolon_check.cpp  test_starfield_effect.cpp  test_superscope_scripts.cpp  test_variables.cpp
tests/fixtures/: avs_examples.txt  simple_expressions.txt
tools/: CMakeLists.txt  README.md  TOOLS.md  avs2json.cpp  avs_render_test.cpp
